# airPaDE

./: .gitignore  LICENSE  README.md  ccls_regression_mip.py  kr_regression.py  lav_regression.py  ols_regression.py  ols_statsmodels.py  rfe.py  run.py  setup.cfg  sfs.py  summary_all.py
src/: base-data.csv
src/data/: data_sources_readme.txt
src/data/additional_data/: CH_cantons_to_NUTS3.csv  Coastal-regions-NUTS-2021_amended.csv  NUTS2016to2021recodings.csv  UK_NUTS3_to_ITL3.csv  dist-data.csv
src/data/legacy_nuts2016/: Coastal-regions-NUTS-2016_amended.csv  UK_NUTS3_to_ITL3_NUTS2016.csv  base-data_NUTS2016.csv  dist-data_NUTS2016.csv  nama_10r_3gdp_NUTS2016.tsv
src/data_creation/: download_data.py  extract_data.py
src/estimation/: ccls_group_regression_mip.py  data_functions.py  neural_network.py  ols_noGrav.py  ppml_regression.py  run_feature_selection.py  sv_regression.py
