[metadata]
name = airPaDE
version = 0.1
author = Imke Joormann, Andreas Tillmann, Sabrina Ammann
author_email = i.joormann@tu-braunschweig.de
description = Code, scripts and data for European air passenger demand estimation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/imkejoor/airPaDE
project_urls = Bug Tracker = https://github.com/imkejoor/airPaDE/issues


classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    openpyxl
    gurobipy
    scipy
    numpy
    sklearn
    tensorflow
    statsmodels.api
    joblib
    tensorflow_addons

[options.packages.find]
where = src

[options.package_data]
* = *.csv, *.tsv
